--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Chilaguas - Blog</title>
+    <title>Chilaguas - Bajo Construcción</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -42,7 +42,7 @@
         </div>
         <!-- Spinner End -->
 
-        <!-- Navbar & Hero Start -->
+        <!-- Navbar Start -->
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand p-0">
@@ -63,127 +63,49 @@
                     <a href="soon.html" class="btn btn-primary py-2 px-4">Pedir en Línea</a>
                 </div>
             </nav>
+            <!-- Navbar End -->
 
-            <div class="container-xxl py-5 bg-dark hero-header mb-5">
-                <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Blog</h1>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                            <li class="breadcrumb-item"><a href="map.html">Páginas</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Blog</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
-        </div>
-        <!-- Navbar & Hero End -->
-
-        <!-- Testimonial Start -->
-        <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="container">
-                <div class="text-center">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonios</h5>
-                    <h1 class="mb-5">Nuestros Clientes dicen:</h1>
-                </div>
-                <div class="owl-carousel testimonial-carousel">
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Texto de Ejemplo</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Nombre del Cliente</h5>
-                                <small>Profesión</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Texto de Ejemplo</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Nombre del Cliente</h5>
-                                <small>Profesión</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Texto de Ejemplo</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Nombre del Cliente</h5>
-                                <small>Profesión</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Texto de Ejemplo</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Nombre del Cliente</h5>
-                                <small>Profesión</small>
-                            </div>
-                        </div>
+            <!-- Credits Start -->
+            <div class="container-xxl py-5 bg-dark hero-credits-template mb-5">
+                <div class="container text-center my-5 pt-5 py-5 pb-4">
+                    <div class="row align-items-center g-5">
+                        <h1 class="display-3 text-white mb-3 animated slideInDown">Créditos de Plantilla</h1>
+                        <h3 class="display-3 text-white mb-3 animated slideInDown">
+                            <i class="fa fa-file-code text-secondary mb-4"></i>  HTML Codex y ThemeWagon 
+                            <i class="fa fa-sitemap text-secondary mb-4"></i>
+                        </h3>
                     </div>
                 </div>
             </div>
+            <ul style="list-style: none; padding-left: 0;">
+                <li> Plantilla diseñada por <a href="https://htmlcodex.com">HTML Codex</a></li>
+                <li> Plantilla distribuida por <a href="https://themewagon.com" target="_blank">ThemeWagon</a></li>
+            </ul>
         </div>
-        <!-- Testimonial End -->
 
-        <!-- Service Start -->
-        <div class="container-xxl py-5">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <div class="container">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal mb-5">Sobre Nosotros</h5>
-                    <h1 class="mb-5">Lo que ofrecemos</h1>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="service-item rounded pt-3">
-                            <div class="p-4">
-                                <i class="fa fa-3x fa-carrot text-primary mb-4"></i>
-                                <h5>Ingredientes Naturales</h5>
-                                <p>Texto de Ejemplo.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="service-item rounded pt-3">
-                            <div class="p-4">
-                                <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
-                                <h5>Preparado con Calidad</h5>
-                                <p>Texto de Ejemplo.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="service-item rounded pt-3">
-                            <div class="p-4">
-                                <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
-                                <h5>Pedidos en Línea</h5>
-                                <p>Texto de Ejemplo.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="service-item rounded pt-3">
-                            <div class="p-4">
-                                <i class="fa fa-3x fa-headset text-primary mb-4"></i>
-                                <h5>Soporte 24/7</h5>
-                                <p>Texto de Ejemplo.</p>
-                            </div>
-                        </div>
-                    </div>
+        <div class="container-xxl py-5 bg-dark hero-credits-img mb-5">
+            <div class="container text-center my-5 pt-5 py-5 pb-4">
+                <div class="row align-items-center g-5">
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Créditos de Imágenes</h1>
+                    <h3 class="display-3 text-white mb-3 animated slideInDown">
+                        <i class="fa fa-file-image text-secondary mb-4"></i>  Pixabay 
+                        <i class="fa fa-folder-open text-secondary mb-4"></i>
+                    </h3>
                 </div>
             </div>
         </div>
-        <!-- Service End -->
+        <ul style="list-style: none; padding-left: 0;">
+                <li> Salsa Roja - Imagen de Imagen de <a href="https://pixabay.com/es/users/mrdidg-11821588/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5514235">Didier</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5514235">Pixabay</a></li>
+                <li> Salsa Verde - Imagen de <a href="https://pixabay.com/es/users/lyubovkardakova-4330340/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4145935">Lyubov Kardakova</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4145935">Pixabay</a></li>
+                <li> Agua de Limón con Pepino- Imagen de <a href="https://pixabay.com/es/users/be_stasya-11197808/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6585073">Анастасия Белоусова</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6585073">Pixabay</a></li>
+                <li> Agua de Horchata con Melón (Realmente Leche) - Imagen de <a href="https://pixabay.com/es/users/congerdesign-509903/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=518067">congerdesign</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=518067">Pixabay</a></li>
+                <li> Agua de Sandía con Fresas - Imagen de <a href="https://pixabay.com/es/users/virin000-4559233/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3166311">Polina</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3166311">Pixabay</a></li>
+                <li> Agua de Piña con Coco - Imagen de <a href="https://pixabay.com/es/users/rierosa222-5673828/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2540622">Adelia Rosalinda</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2540622">Pixabay</a></li>
+                <li> Chilaquiles (placeholder) - Imagen de <a href="https://pixabay.com/es/users/mktsamuelarzate-18020323/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5512590">Samuel Arzate</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5512590">Pixabay</a></li>
+                <li> Fondo de Construcción - Imagen de <a href="https://pixabay.com/es/users/geralt-9301/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2422171">Gerd Altmann</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2422171">Pixabay</a></li>
+            </ul>
+        <!-- Credits End -->
+    </div>
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
