--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-logo m-0"><i class="fa fa-pepper-hot me-3"></i>Chilaguas</h1>
+                    <h1 class="text-logo m-0"><i class="fa fa-pepper-hot me-3"></i>ChilAguas</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -54,12 +54,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                        <a href="special.html" class="nav-item nav-link active">Nuevo!</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Pedir en Línea</a>
+                    <a href="soon.html" class="btn btn-primary py-2 px-4">Pedir en Línea</a>
                 </div>
             </nav>
         
@@ -69,7 +70,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                            <li class="breadcrumb-item"><a href="#">Páginas</a></li>
+                            <li class="breadcrumb-item"><a href="map.html">Páginas</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">Contacto</li>
                         </ol>
                     </nav>
@@ -90,7 +91,7 @@
                         <div class="row gy-4">
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Whatsapp</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>+52 56 3453 1270</p>
+                                <p><i class="fab fa-whatsapp text-primary me-2"></i>+52 56 3453 1270</p>
                             </div>
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Correo</h5>
@@ -98,7 +99,7 @@
                             </div>
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Soporte Técnico</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>jose_1323144021@uptecamac.edu.mx</p>
+                                <p><i class="fa fa-code text-primary me-2"></i>jose_1323144021@uptecamac.edu.mx</p>
                             </div>
                         </div>
                     </div>
@@ -154,9 +155,10 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Compañia</h4>
-                        <a class="btn btn-link" href="">Sobre Nosotros</a>
-                        <a class="btn btn-link" href="">Política de Privacidad</a>
-                        <a class="btn btn-link" href="">Terminos & Condiciones</a>
+                        <a class="btn btn-link" href="about.html">Sobre Nosotros</a>
+                        <a class="btn btn-link" href="soon.html">Política de Privacidad</a>
+                        <a class="btn btn-link" href="soon.html">Terminos & Condiciones</a>
+                        <a class="btn btn-link" href="map.html">Mapa de Sitio</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contacto</h4>
@@ -167,15 +169,15 @@
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/chilaguas"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Horario</h4>
                         <h5 class="text-light fw-normal">Lunes - Viernes</h5>
-                        <p>09:00 AM - 09:00 PM</p>
-                        <h5 class="text-light fw-normal">Sábado</h5>
-                        <p>11:00 AM - 05:00 PM</p>
+                        <p>02:00 PM - 09:00 PM</p>
+                        <h5 class="text-light fw-normal">Sábados</h5>
+                        <p>09:00 AM - 12:00 PM</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h4>
@@ -190,18 +192,16 @@
             <div class="container">
                 <div class="copyright">
                     <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, Todos los derechos reservados. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <div class="col-md-8 text-center text-md-start mb-3 mb-md-0">
+                            2026 &copy;<a class="border-bottom" href="https://chilaguas.lat">Chilaguas.lat</a> de Empresaurios. Todos los derechos reservados.
 							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br>
                             Distributed By <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
                         </div>
-                        <div class="col-md-6 text-center text-md-end">
+                        <div class="col-md-4 text-center text-md-end">
                             <div class="footer-menu">
                                 <a href="index.html">Inicio</a>
-                                <a href="">Cookies</a>
-                                <a href="">FQA</a>
+                                <a href="soon.html">Cookies</a>
+                                <a href="soon.html">FQA</a>
                             </div>
                         </div>
                     </div>
