--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Chilaguas - Nosotros</title>
+    <title>Chilaguas - Bajo Construcción</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -60,145 +60,52 @@
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                     </div>
-                    <a href="soon.html"btn btn-primary py-2 px-4">Pedir en Línea</a>
+                    <a href="soon.html" class="btn btn-primary py-2 px-4">Pedir en Línea</a>
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-dark hero-header mb-5">
-                <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Sobre Nosotros</h1>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                            <li class="breadcrumb-item"><a href="map.html">Páginas</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Nosotros</li>
-                        </ol>
-                    </nav>
+            <div class="container-xxl py-5 bg-dark hero-build mb-5">
+                <div class="container text-center my-5 pt-5 py-5 pb-4">
+                    <div class="row align-items-center g-5">
+                        <h1 class="display-3 text-white mb-3 animated slideInDown">Próximamente</h1>
+                        <h3 class="display-3 text-white mb-3 animated slideInDown">
+                            <i class="fa fa-hard-hat text-primary mb-4"></i>  Bajo Construcción  
+                            <i class="fa fa-hammer text-primary mb-4"></i>
+                        </h3>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- Navbar & Hero End -->
 
-        <!-- About Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6">
-                        <div class="row g-3">
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg">
-                            </div>
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg" style="margin-top: 25%;">
-                            </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
-                            </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">¿Quíenes Somos?</h5>
-                        <h1 class="mb-4">Bienvenidos a Chilaguas <i class="fa fa-pepper-hot text-primary me-2"></i></h1>
-                        <p class="mb-4">Texto de Ejemplo</p>
-                        <p class="mb-4">A B C D E F G H I J K L M N Ñ O P Q R S T U V W X Y Z</p>
-                        <div class="row g-4 mb-4">
-                            <div class="col-sm-6">
-                                <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
-                                    <div class="ps-4">
-                                        <p class="mb-0">Metrica</p>
-                                        <h6 class="text-uppercase mb-0">Ejemplo</h6>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1>
-                                    <div class="ps-4">
-                                        <p class="mb-0">Metrica</p>
-                                        <h6 class="text-uppercase mb-0">Ejemplo</h6>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <a class="btn btn-primary py-3 px-5 mt-2" href="">Leer Más</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- About End -->
-
-        <!-- Team Start -->
-        <div class="container-xxl pt-5 pb-3">
+        <!-- Contact Start -->
+        <div class="container-xxl py-1">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Nuestro Equipo</h5>
-                    <h1 class="mb-5">Conozca a los Cocineros</h1>
-                </div>
+                    <a href="#" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft" 
+                    onclick="if (history.length > 1) { history.back(); } else { window.location.href='index.html'; }"> Regresar </a>
+                </div><br><br>
                 <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item text-center rounded overflow-hidden">
-                            <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/profile.png" alt="">
+                    <div class="col-12">
+                        <div class="row gy-4">
+                            <div class="col-md-4">
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Whatsapp</h5>
+                                <p><i class="fab fa-whatsapp text-primary me-2"></i>+52 56 3453 1270</p>
                             </div>
-                            <h5 class="mb-0">Nombre</h5>
-                            <small>Puesto/Cargo</small>
-                            <div class="d-flex justify-content-center mt-3">
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
+                            <div class="col-md-4">
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Correo</h5>
+                                <p><i class="fa fa-envelope-open text-primary me-2"></i>chilaguas@gmail.com</p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item text-center rounded overflow-hidden">
-                            <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/profile.png" alt="">
-                            </div>
-                            <h5 class="mb-0">Nombre</h5>
-                            <small>Puesto/Cargo</small>
-                            <div class="d-flex justify-content-center mt-3">
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item text-center rounded overflow-hidden">
-                            <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/profile.png" alt="">
-                            </div>
-                            <h5 class="mb-0">Nombre</h5>
-                            <small>Puesto/Cargo</small>
-                            <div class="d-flex justify-content-center mt-3">
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="team-item text-center rounded overflow-hidden">
-                            <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/profile.png" alt="">
-                            </div>
-                            <h5 class="mb-0">Nombre</h5>
-                            <small>Puesto/Cargo</small>
-                            <div class="d-flex justify-content-center mt-3">
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
+                            <div class="col-md-4">
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Soporte Técnico</h5>
+                                <p><i class="fa fa-code text-primary me-2"></i>jose_1323144021@uptecamac.edu.mx</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Team End -->
+        <!-- Contact End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
